UPI_Without_Internet-main/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upi-mesh
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
